Commit formulário de cadastro do produto
Adicionado:
- FormCadastroProduto.jsx
- FormCadastroProduto.modules.css

--- a/src/css/Principal.module.css
+++ b/src/css/Principal.module.css
@@ -6,6 +6,8 @@
 }
 
 main{
+    display: flex;
+    flex-direction: column;
     margin-top: 40px;
     padding-right: 50px;
     padding-left: 50px;
