--- a/src/pages/Footer/Footer.module.css
+++ b/src/pages/Footer/Footer.module.css
@@ -1,6 +1,9 @@
 footer{
-    background-color: #2d394b;
+    background-color: #000000;
     padding-block: 20px;
     display: flex;
     justify-content: center;
+}
+.footer_img{
+    height: 50px;
 }
