--- a/src/pages/Header/Header.module.css
+++ b/src/pages/Header/Header.module.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-
+    box-sizing: border-box;
     text-decoration: none;
     font-size: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -15,7 +15,7 @@
     align-items: center;
     padding-block: 10px;
     background-color: #2d394b;
-    height: 45px; 
+    height: 10vh; 
 }
 .cabecalho a{
     height: 100%;
