--- a/src/components/Produto/Produto.module.css
+++ b/src/components/Produto/Produto.module.css
@@ -1,13 +1,13 @@
 .novidades_produto{
     width: 250px;
     background-color: white;
-    padding-bottom: 20px;
+    padding: 20px 20px 0px 20px;
     margin: 31px;
 }
 
 .novidade_produto_imagem{
-    width: 250px;
-    height: 200px;
+    width: 200px;
+    height: 190px;
 }
 
 .novidade_produto_descricao{
@@ -16,7 +16,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     font-weight: bold;
-    padding: 10px;
+    padding: 0px;
     color: black;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .novidade_produto_botao{
-    margin: 40px;
+    margin: 40px 40px 40px 0px;
     background-color: #296275;
     color: white;
     border: none;
