--- a/src/pages/CadastroProduto/CadastroProduto.module.css
+++ b/src/pages/CadastroProduto/CadastroProduto.module.css
@@ -6,21 +6,16 @@
     backdrop-filter: blur(15px);
 }
 h1{
-    color: #000000;
+    color: #fff;
     padding-bottom: 20px;
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
 }
 label{
     color: #000000;
     font-weight: 700;
 }
-form{
-    color: #0e0e0e;
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
+
 textarea{
     font-size: 1em;
     background-color: #18213383;
@@ -46,17 +41,27 @@ textarea{
 .input_text{
     width: 100%;
     height: 50px;
-    background-color: #18213383;
+    background-color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 2px;
     outline: none;
     font-size: 1em;
     color: #0e0e0e;
+    padding-left: 15px;
+    padding-right: 10px;
 }
 .input_image{  
     height: 250px;
     width: 250px;
 }
+
+label{
+    color: #fff;
+}
+textarea{
+    background-color: #fff;
+}
+
 .drop_container {
     background-color: #18213383;
     position: relative;
@@ -84,14 +89,31 @@ textarea{
   }
   
   .drop_title {
-    color: #000000;
+    color: #000;
     font-size: 20px;
     font-weight: bold;
     text-align: center;
     transition: color .2s ease-in-out;
   }
 
+.flexivel{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-bottom: 40px;
+    gap: 40px;
+}
 
+.formulario_produto{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 50px;
+    background-color: #2D394B;
+    border: solid 2px #F0F8FF;
+    border-radius: 7px;
+    margin-bottom: 30px;
+}
 
   @media(max-width:950px) {
     form{
