--- a/src/pages/Header/Header.module.css
+++ b/src/pages/Header/Header.module.css
@@ -41,13 +41,13 @@
     text-decoration: none;
     font-size: 16px;
     font-weight: 600;
-    color: #4af706;
+    color: #fff;
     transition: 0.3s ease;
 }
 
 .navbar li a:hover,
 .navbar li a.active{
-    color: rgb(255, 3, 3);
+    color: #aaa;
 }
 
 .navbar li a.active::after,
