--- a/src/pages/Header/Header.module.css
+++ b/src/pages/Header/Header.module.css
@@ -15,7 +15,18 @@
     align-items: center;
     padding-block: 10px;
     background-color: #2d394b;
-    height: 10vh; 
+     
+
+    height: 60px;
+    width: 100%;
+   
+    
+    position: relative;
+    padding: 0.5rem 0rem;
+   
+    color: black;
+    box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
+
 }
 .cabecalho a{
     height: 100%;
@@ -61,14 +72,107 @@
     left: 20px;
 }
 .header_li{
+    height: 60px;
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    align-items: center;
+    position: relative;
+    padding: 0.5rem 0rem;
+   
+    color: black;
+   
 }
 
+.navigation_menu{
+    margin-left: auto;
+}
+
+
+.navigation_menu_ul {
+    display: flex;
+    padding: 0;
+  }
+  .navigation_menu_li {
+    
+    list-style-type: none;
+    margin: 0 1rem;
+  }
+
+
+  .hamburger {
+   
+    border: 0;
+    height: 40px;
+    width: 40px;
+    padding: 0.5rem;
+    border-radius: 50%;
+    background-color: #8372df;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+    position: absolute;
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%);
+    display: none;
+  }
+  .hamburger:hover {
+    background-color: #ffffff;
+  }
 /*reponsividade*/
 
 
+@media screen and (max-width: 768px) {
+    .hamburger {
+      display: block;
+    }
+  }
+
+@media screen and (max-width: 768px) {
+    
+
+    .navigation_menu_ul {
+        position: absolute;
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 60px;
+       
+        height: calc(100vh - 77px);
+        width: 100%;
+        background-color: #2d394b;
+        box-shadow: 0 40px 60px rgb(0, 0, 0, 0.1);
+        padding: 80 px 0 0 10px;
+        transition: 0.3s;
+
+      }
+    
+     
+      .navigation_menu.cliked ul {
+        display: block;
+      }
+    
+
+      .navigation_menu_li {
+        
+        text-align: center;
+        margin: 0;
+        margin-bottom: 25px;
+      }
+      .navigation_menu_li a {
+        color: black;
+        width: 100%;
+        padding: 1.5rem 0;
+      }
+      .navigation_menu_li:hover {
+        color: #aaa;
+      }
+
+      .open {
+        display: block;
+      }
+  }
 
 .mobile{
     display: none;
