--- a/src/components/ProdutoLojista/ProdutoLojista.module.css
+++ b/src/components/ProdutoLojista/ProdutoLojista.module.css
@@ -1,7 +1,7 @@
 .produtoLojista{
     display: flex;
     flex-direction: row;
-    background-color: orange;
+    background-color: rgb(136, 130, 119);
     width: 1300px;
     height: 250px;
     margin-bottom: 20px;
