--- a/Frontend/src/components/Lojista/LojistaInfo.module.css
+++ b/Frontend/src/components/Lojista/LojistaInfo.module.css
@@ -1,3 +1,14 @@
 .campo_info{
-    padding-block: 20px;
+    margin-top: 20px;
 }
+.campo_btn{
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    gap: 35px;
+}
+
+.btn_exclusao{
+    background-color: rgb(255, 68, 68);
+}
+
